# fucktorial

./: .gitignore  Dockerfile  README.md  config.toml  docker-compose.yml  pyproject.toml
src/: auth.py  bot.py  constants.py  main.py  navigator.py
tests/: test_bot.py  test_main.py  test_navigator.py
